resolved spacing and coloring issues

--- a/css/index.css
+++ b/css/index.css
@@ -158,9 +158,14 @@ body h2 {
 }
 body h3 {
   font-size: 1.9rem;
+  width: 100%;
+  padding-top: 0;
+  padding-bottom: 15px;
 }
 body h4 {
   font-size: 1.5rem;
+  padding-top: 0px;
+  padding-bottom: 15px;
 }
 body h1,
 body h2,
@@ -240,13 +245,44 @@ body p {
     flex-direction: row;
   }
 }
+.container .bottom {
+  border-bottom: none;
+}
+.container .position {
+  text-align: center;
+  padding-top: 20px;
+  background: #8fb4c2;
+  color: white;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .container .position {
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+}
+@media (min-width: 768px) {
+  .container .position {
+    margin-top: none;
+    margin-bottom: none;
+  }
+}
+header {
+  background: #d0d8db;
+}
+@media (min-width: 1200px) {
+  header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
 header .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
   header .container {
     justify-content: space-between;
   }
@@ -257,7 +293,7 @@ header .container h1 {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
   header .container h1 {
     width: 60%;
     text-align: left;
@@ -282,6 +318,13 @@ nav a {
   font-size: 1.2rem;
   text-decoration: none;
   padding-bottom: 20px;
+  color: black;
+}
+nav a:hover {
+  background: #8fb4c2;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
 }
 @media (min-width: 768px) {
   nav a {
@@ -297,7 +340,6 @@ footer {
 }
 footer .container {
   border-top: 1px gray solid;
-  border: 2px blue solid;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -313,24 +355,13 @@ footer .container .social {
 footer .container .social i {
   font-size: 2rem;
   padding: 20px;
+  color: black;
+}
+footer .container .social i:hover {
+  color: #8fb4c2;
 }
 footer .container h4 {
   padding-bottom: 20px;
-}
-h3 {
-  width: 100%;
-  padding-top: 0px;
-  padding-bottom: 15px;
-}
-@media (max-width: 767px) {
-  figure {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-}
-h4 {
-  padding-top: 0px;
-  padding-bottom: 15px;
 }
 .hero-image {
   min-height: 500px;
@@ -381,11 +412,16 @@ h4 {
   justify-content: center;
   align-items: center;
   border-radius: 20px;
+  color: #75328a;
 }
 @media (max-width: 767px) {
   .hero-image .container a div {
     width: 100%;
   }
+}
+.hero-image .container a div:hover {
+  background: #d0d8db;
+  color: white;
 }
 figure {
   width: 100%;
@@ -401,5 +437,7 @@ figure img {
 @media (max-width: 767px) {
   figure {
     margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
