--- a/less/hero-image-section.less
+++ b/less/hero-image-section.less
@@ -37,9 +37,15 @@
                 .pad-it(20px, 20px);
                 .flex-layout-styles(center, center);
                 border-radius: 20px;
+                color: #75328a;
 
                 @media @mobile {
                     width: 100%;
+                }
+
+                &:hover {
+                    background: @header;
+                    color: white;
                 }
             }
         }
