--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,15 @@
+//*****breakpoints*****//
+
 @mobile: ~"(max-width: 767px)";
 @tablet: ~"(min-width: 768px)";
 @desktop: ~"(min-width: 1200px)";
 
+
+//*****fonts*****//
 @p: "Roboto", sans-serif;
 @h: "Raleway", sans-serif;
+
+
+//*****colors*****//
+@headers-and-hovers: #8fb4c2;
+@header: #d0d8db;
